sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: not found: value w
			w=i-j
                        ^AlgInsertionSort:17: error: not found: value w
		setValeur(w,v)
                          ^